# aiogram_1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
bot/: aioredis.py  config.py  main.py
bot/commands/: __init__.py  commands_info.py  help.py  settings.py  start.py
bot/db/: __init__.py  base.py  channel.py  engine.py  post.py  user.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 869c5e2b005e_create_posts.py  ddb36b25930a_init_check.py
bot/handlers/: __init__.py  callback_data_states.py  commands_info.py  create_post.py  get_post.py  help.py  settings.py  start.py  web_app_data.py
bot/middlewares/: __init__.py  register_check.py
bot/structures/: __init__.py  fsm_groups.py
bot/structures/callback_data_factories/: __init__.py  post_data.py
bot/structures/keyboards/: __init__.py  cancel_board.py  menu_board.py  posts_board.py  prtype_board.py
bot/tests/: conftest.py  mocked_bot.py  test_start_integr.py  utils.py
bot/tests/test_handlers/: test_start.py
