[tool.poetry]
name = "masson"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Manuilov Daniil <manuilovdaniil@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
environs = "^9.5.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
redis = "^4.5.5"
magic-filter = "^1.0.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 311
profile = "black"
known_first_party = ["commands"]

[tool.flake8]
max-complexity = 10
max-line-length = 120
exclude = "venv/,*/migrations/"
per-file-ignores = [
    "*/migrations/*: E501, E402",
    "venv/*: E501",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "bot",
]
cache_dir = "bot/tests/.pytest_cache"
filterwarnings = "ignore::DeprecationWarning"
